<resources>
    <string name="app_name">AppDulich</string>
    <string name="lbl_loading">Loading</string>
    <string name="btn_ok">Ok</string>
    <string name="channel_name">app du lich</string>
    <string name="lbl_hello_app">"Welcome to our app "</string>
    <string name="lbl_wellcome">Welcome to apps</string>
    <string name="lbl_login">LOGIN</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="lbl_forgot_password">Forgot Password</string>
    <string name="lbl_register">New User? Register Now</string>
    <string name="lbl_register1">REGISTER</string>
    <string name="hint_name">Name</string>
    <string name="btn_register">Register</string>
    <string name="lbl_you_have_account">You already have an account ?</string>
    <string name="btn_verify">Verify account</string>
    <string name="btn_verify_1">This proves that the account really belongs to you</string>
    <string name="btn_verify_2">Confirm the code provided in your email.xxx.xxx</string>
    <string name="hint_insert_code">Insert code</string>
    <string name="btn_send">Send</string>
    <string name="MAP_API_KEY">AIzaSyA-9wbN8tfmS1DhvjeEhSOa6gYo8SwGw9Y</string>
    <string name="lbl_avatar">Avatar</string>
    <string name="lbl_user_name">User name</string>
    <string name="lbl_info">Information</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_phone">Phone</string>
    <string name="lbl_birth_day">Birth day</string>
    <string name="lbl_gender">Gender</string>
    <string name="lbl_update">Update</string>
    <string name="lbl_my_profile">My Profile</string>
    <string name="lbl_change_password">Change Password</string>
    <string name="lbl_help_support">Help - Support</string>
    <string name="lbl_about">About</string>
    <string name="lbl_setting">Setting</string>
    <string name="lbl_logout">Logout</string>
    <string name="lbl_verify_account">Verify Account</string>
    <string name="lbl_close">Close</string>
    <string name="hint_old_password">Old password</string>
    <string name="hint_new_password">New password</string>
    <string name="lbl_new_password">New Password</string>
    <string name="lbl_agree">Agree</string>
    <string name="lbl_error_email">Email invalif</string>
    <string name="lbl_error_password">Password invalid</string>
    <string name="lbl_error_phone">Phone invalid</string>
    <string name="lbl_error_name">Name invalid</string>
    <string name="lbl_error">Error</string>
    <string name="lbl_error_verify_code">Incorrect code</string>
    <string name="lbl_error_confirm_pass">confirm password must be the same as the password</string>
    <string name="lbl_account_error">"Malformed account "</string>
    <string name="lbl_update_password_success">Update password success</string>
    <string name="lbl_ic_back">icon back</string>
    <string name="lbl_update_profile">Update profile</string>
    <string name="lbl_name">Name</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_birth_day">Birth day</string>
    <string name="lbl_ic_date">icon date</string>
    <string name="lbl_ic_drop">icon drop</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_boy">Boy</string>
    <string name="lbl_gir">Gir</string>
    <string name="lbl_update_profile_error">Update failed please check again</string>
    <string name="lbl_change_password_success">Change password success</string>
    <string name="lbl_font">Font</string>
    <string name="lbl_font_size">Font size</string>
    <string name="lbl_get_notifications">Get notifications</string>
    <string name="lbl_favorite_history">"Favorite history "</string>
    <string name="lbl_icon_next">icon next</string>
    <string name="lbl_permission">Please provide permission google service</string>
    <string name="lbl_check_gps">Please enable gps</string>
    <string name="lbl_location_error">please enable gps</string>
    <string name="lbl_my_location">My Location</string>
    <string name="lbl_icon_menu">icon</string>
    <string name="lbl_error_search">No matching results were found</string>
    <string name="lbl_directional">Directional</string>
    <string name="lbl_image">Image</string>
    <string name="lb_icon_location">icon location</string>
    <string name="lbl_title_here">Title Here</string>
    <string name="lbl_description_here">Description here</string>
    <string name="lbl_header">image header</string>
    <string name="lbl_title_here_slide2">There Is No Gain \n Without Pain</string>
    <string name="lbl_description_here_slide_2">Continue the workout \nto get maximum result</string>
    <string name="lbl_logo">Logo</string>
    <string name="lbl_title_here_slide3">Title here</string>
    <string name="lbl_description_here_slide_3">Automatically saved in our\nclouds and locked</string>
    <string name="lbl_get_started">GET STARTED</string>
    <string name="lbl_map">Google Map</string>
    <string name="lbl_account_error_local">Can\'t find your account please login again</string>
    <string name="lbl_home">Home</string>
    <string name="lbl_search">Search</string>
    <string name="lbl_favorite">Favorite</string>
    <string name="lbl_account">Account</string>
    <string name="lbl_see_more">See more</string>
    <string name="lbl_utilities">Utilities</string>
    <string name="lbl_event">Event</string>
    <string name="lbl_introduce">Introduce</string>
    <string name="lbl_overview">Overview</string>
    <string name="lbl_detail">Detail Place</string>
    <string name="name_place">name place</string>
    <string name="lbl_save_local_success">Save favorite success</string>
</resources>