<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.nhom5.appdulich.viewmodel.SettingAccountViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_21dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="@dimen/_30dp"
                    android:layout_height="@dimen/_30dp"
                    android:id="@+id/imgBack"
                    android:contentDescription="@string/lbl_ic_back"
                    android:src="@drawable/ic_back"
                    app:tint="@color/h9497AD" />

                <TextView
                    style="@style/TextContent"
                    android:layout_centerHorizontal="true"
                    android:text="@string/lbl_update_profile"
                    android:textSize="@dimen/_18sp" />
            </RelativeLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_29dp"
                android:contentDescription="@string/lbl_avatar"
                android:src="@drawable/ic_user" />

            <TextView
                style="@style/TextContent"
                android:textSize="@dimen/_14sp"
                android:layout_marginTop="@dimen/_26dp"
                android:text="@string/lbl_email" />

            <EditText
                style="@style/EdittextUpdateProfile"
                android:autofillHints="emailAddress"
                android:hint="@string/hint_email"
                android:focusable="false"
                android:inputType="textEmailAddress"
                android:text="@{viewModel.email}" />

            <TextView
                android:textSize="@dimen/_14sp"
                style="@style/TextContent"
                android:layout_marginTop="@dimen/_26dp"
                android:text="@string/lbl_name" />

            <EditText
                style="@style/EdittextUpdateProfile"
                android:autofillHints="name"
                android:hint="@string/hint_name"
                android:inputType="text"
                checkError='@{""}'
                android:id="@+id/edtName"
                android:text="@={viewModel.name}" />

            <TextView
                android:textSize="@dimen/_14sp"
                style="@style/TextContent"
                android:layout_marginTop="@dimen/_26dp"
                android:text="@string/lbl_phone" />

            <EditText
                style="@style/EdittextUpdateProfile"
                android:autofillHints="phone"
                android:hint="@string/hint_phone"
                android:id="@+id/edtPhone"
                checkError='@{""}'
                android:inputType="phone"
                android:text="@={viewModel.phone}" />

            <TextView
                android:textSize="@dimen/_14sp"
                style="@style/TextContent"
                android:layout_marginTop="@dimen/_26dp"
                android:text="@string/lbl_birth_day" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    style="@style/EdittextUpdateProfile"
                    android:autofillHints="creditCardExpirationDate"
                    android:focusable="false"
                    android:hint="@string/hint_birth_day"
                    android:inputType="text"
                    android:text="@={viewModel.birthDay}" />

                <ImageView
                    android:id="@+id/imgDatePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/_10dp"
                    android:contentDescription="@string/lbl_ic_date"
                    android:src="@drawable/ic_date" />
            </RelativeLayout>

            <TextView
                android:textSize="@dimen/_14sp"
                style="@style/TextContent"
                android:layout_marginTop="@dimen/_26dp"
                android:text="@string/lbl_gender" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    style="@style/EdittextUpdateProfile"
                    android:autofillHints="name"
                    android:focusable="false"
                    android:hint="@string/lbl_gender"
                    android:inputType="text"
                    android:text="@={viewModel.gender}" />

                <ImageView
                    android:id="@+id/imgDrop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/_10dp"
                    android:contentDescription="@string/lbl_ic_drop"
                    android:src="@drawable/ic_drop_down" />
            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatButton
                style="@style/Button"
                android:id="@+id/btnUpdate"
                android:layout_height="@dimen/_40dp"
                android:layout_marginBottom="@dimen/_40dp"
                android:text="@string/lbl_save"
                />
        </LinearLayout>

    </ScrollView>
</layout>