<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_21dp">

    <TextView
        android:id="@+id/txtTitle"
        style="@style/TextTitle"
        android:text="@string/lbl_setting"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="@dimen/_30dp"
        android:layout_height="@dimen/_30dp"
        android:clickable="true"
        android:contentDescription="@string/lbl_close"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:src="@drawable/ic_close"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30dp"
        android:stretchColumns="1"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle">

        <TableRow android:gravity="center_vertical">

            <TextView
                style="@style/TextContent"
                android:text="@string/lbl_font"
                android:textColor="@color/h666666" />

            <TextView
                style="@style/EdittextUpdateProfile"
                android:layout_width="match_parent"
                android:layout_marginStart="@dimen/_21dp"
                android:layout_marginTop="0dp"
                app:drawableEndCompat="@drawable/ic_drop_down" />
        </TableRow>

        <TableRow
            android:layout_marginTop="@dimen/_20dp"
            android:gravity="center_vertical">

            <TextView
                style="@style/TextContent"
                android:text="@string/lbl_font_size"
                android:textColor="@color/h666666" />

            <TextView
                style="@style/EdittextUpdateProfile"
                android:layout_width="match_parent"
                android:layout_marginStart="@dimen/_21dp"
                android:layout_marginTop="0dp"
                app:drawableEndCompat="@drawable/ic_drop_down" />
        </TableRow>

        <TableRow android:layout_marginTop="@dimen/_20dp">

            <TextView
                style="@style/TextContent"
                android:text="@string/lbl_get_notifications"
                android:textColor="@color/h666666" />

            <Switch
                android:layout_marginStart="@dimen/_21dp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </TableRow>

        <TableRow
            android:layout_marginTop="@dimen/_20dp"
            android:gravity="center_vertical">

            <TextView
                style="@style/TextContent"
                android:text="@string/lbl_favorite_history"
                android:textColor="@color/h666666" />

            <ImageView
                android:layout_height="@dimen/_15dp"
                android:layout_gravity="end|center_vertical"
                android:contentDescription="@string/lbl_icon_next"
                android:paddingEnd="@dimen/_21dp"
                android:src="@drawable/ic_next" />
        </TableRow>

        <androidx.appcompat.widget.AppCompatButton
            style="@style/Button"
            android:layout_marginTop="@dimen/_50dp"
            android:text="@string/lbl_save" />
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>