<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.nhom5.appdulich.viewmodel.SettingAccountViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/hF6F6F6"
        android:orientation="vertical">


        <androidx.cardview.widget.CardView
            style="@style/CardViewProfile"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imgBack"
                    android:layout_width="@dimen/_30dp"
                    android:layout_height="@dimen/_30dp"
                    android:layout_marginStart="@dimen/_21dp"
                    android:layout_marginTop="@dimen/_21dp"
                    android:layout_marginEnd="@dimen/_21dp"
                    android:layout_marginBottom="@dimen/_21dp"
                    android:contentDescription="@string/lbl_ic_back"
                    android:src="@drawable/ic_back"
                    app:tint="@color/h9497AD" />

                <ImageView
                    android:id="@+id/imgAvatar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imgBack"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/lbl_avatar"
                    android:src="@drawable/ic_user" />

                <TextView
                    style="@style/TextContent"
                    android:layout_below="@+id/imgAvatar"
                    android:layout_centerHorizontal="true"
                    android:padding="@dimen/_21dp"
                    android:text="@={viewModel.name}" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/CardViewProfile"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_48dp"
                    android:gravity="center_vertical">

                    <TextView
                        style="@style/TextContent"
                        android:layout_marginStart="@dimen/_10dp"
                        android:text="@string/lbl_info"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtUpdate"
                        style="@style/TextContent"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="@dimen/_10dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?attr/selectableItemBackground"
                        android:text="@string/lbl_update"
                        android:textColor="@color/purple_700"
                        android:textStyle="bold" />
                </RelativeLayout>

                <include layout="@layout/layout_underlined_account" />

                <include
                    layout="@layout/layout_row_profile_account"
                    app:text='@={viewModel.email}'
                    app:title='@{@string/lbl_email}' />

                <include
                    layout="@layout/layout_row_profile_account"
                    app:text='@={viewModel.phone}'
                    app:title='@{@string/lbl_phone}' />

                <include
                    layout="@layout/layout_row_profile_account"
                    app:text="@={viewModel.birthDay}"
                    app:title="@{@string/lbl_birth_day}" />

                <include
                    layout="@layout/layout_row_profile_account"
                    app:text='@={viewModel.gender}'
                    app:title='@{@string/lbl_gender}' />


            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</layout>